Overflow fix for Firefox

--- a/src/components/App/styles.scss
+++ b/src/components/App/styles.scss
@@ -46,4 +46,8 @@
     font-weight: 500;
     font-size: 23px;
   }
+
+  .AC_W_aNL {
+    overflow: hidden;
+  }
 }
